--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/colorPrimary"
+    android:background="#95a5a6"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
@@ -16,7 +16,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"
-        android:background="@color/colorPrimary"
+        android:background="#95a5a6"
         app:srcCompat="@drawable/coal" />
 
     <TextView
@@ -27,6 +27,6 @@
         android:layout_centerHorizontal="true"
         android:layout_marginTop="48dp"
         android:text="@string/title"
-        android:textColor="@color/colorAccent"
+        android:textColor="@android:color/background_dark"
         android:textSize="40sp" />
 </RelativeLayout>
